...
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/left_arrow"
            android:contentDescription="@string/shrek_left" />

        <TextView
            android:id="@+id/currentDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="3"
            android:text="@string/current_date"
            android:textAlignment="center"
            android:textColor="@color/col_on_secondary"
            android:textSize="18sp"
            app:cornerRadius="50dp" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/right_arrow"
            android:contentDescription="@string/shrek_right" />
    </LinearLayout>
...
    </LinearLayout>


    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridView"
        android:numColumns="7" />

</LinearLayout>
