...
        android:textColor="@color/col_on_primary"
        app:cornerRadius="50dp" />



    <Button
        android:id="@+id/viewEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/view_events"
        android:textAlignment="center"
        android:textColor="@color/col_on_primary"
        app:cornerRadius="50dp" />



...
