<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/col_primary"
        />

    <ListView
        android:id="@+id/dayEventsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:divider="@color/col_primary"
        android:dividerHeight="3dp"
        />

</LinearLayout>