<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.fragment.calendar.CalendarFragment">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

    </com.mapbox.mapboxsdk.maps.MapView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_map_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/my_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_location_button"
            android:contentDescription="@string/my_location_button_desc"
            android:src="@drawable/ic_my_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97" />

        <RelativeLayout
            android:id="@+id/maneuverBarLayout"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/background_navigation_bar"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/next_maneuver_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/next_maneuver_icon_desc" />

            <TextView
                android:id="@+id/next_maneuver_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/next_maneuver_icon"
                android:layout_toEndOf="@+id/next_maneuver_icon"
                android:text=""
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/next_maneuver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/next_maneuver_distance"
                android:layout_alignStart="@+id/next_maneuver_distance"
                android:layout_gravity="fill_horizontal"
                android:layout_marginEnd="10dp"
                android:text=""
                android:textColor="#b5b5b5"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/arrivalBarLayout"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_navigation_bar"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/stop"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="17dp"
                android:gravity="center"
                android:text="@string/navigation_manager_stop"
                android:textColor="#111111"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/eta_next_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/stop"
                android:text=""
                android:textColor="#02a7fa"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/eta_final_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@id/eta_next_destination"
                android:text=""
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/remaining_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eta_final_destination"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@+id/stop"
                android:text=""
                android:textColor="?colorOnPrimary"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/speed_limit_blank"
                android:layout_width="87dp"
                android:layout_height="65dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/speed_limit_sign_desc"
                android:src="@drawable/blank_speed_limit_sign" />

            <TextView
                android:id="@+id/speed_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/speed_limit_blank"
                android:layout_alignBottom="@+id/speed_limit_blank"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="18dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/destinationReachedBarLayout"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_navigation_bar"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/arrivalBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/destination_reached_text"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:text="@string/destination_reached"
                android:textAlignment="viewStart"
                android:textColor="?colorOnPrimary"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/destination_reached_acceptance"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@+id/destination_reached_cancel"
                android:text="@string/destination_reached_acceptance"
                android:textColor="#02a7fa"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/destination_reached_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/destination_reached_cancel"
                android:textColor="#b5b5b5"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_map_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:behavior_hideable="true"
        app:behavior_peekHeight="230dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <TextView
            android:id="@+id/fragment_map_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/fragment_map_event_name"
            android:textColor="@color/col_on_secondary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_map_event_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/fragment_map_event_time_start"
            android:textColor="@color/col_primary"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_map_event_name" />

        <TextView
            android:id="@+id/fragment_map_event_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/fragment_map_event_time_end"
            android:textColor="@color/col_primary"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_map_event_time_start" />

        <TextView
            android:id="@+id/fragment_map_event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/fragment_map_event_location"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_map_event_time_end" />

        <Button
            android:id="@+id/fragment_map_event_nav_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/start_navigation"
            android:textAlignment="center"
            android:textSize="25sp"
            app:cornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_map_event_location" />

        <Button
            android:id="@+id/fragment_map_event_nav_route_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/start_navigation"
            android:textAlignment="center"
            android:textSize="25sp"
            app:cornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_map_event_nav_button" />

        <Button
            android:id="@+id/fragment_map_event_nav_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/nav_cancel"
            android:textAlignment="center"
            android:textSize="25sp"
            app:cornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_map_event_nav_route_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

